discussion/kv_engine/181038/181038_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53898: Reduce impact of Expiry by compaction by batching BgFetch

Problem:
In workloads that heavily utilise TTLs on documents and are in a very
low resident bucket, can cause front end reads to time out.

Cause:
This is due compaction generating a large number of bgfetches which need
to be performed before any front end bgfetches. These compaction expiry
bgfetches can get into the size of ~200K requests in some situations.

Fix:
To fix this we should batch bgfetches so that we can service each
vbucket more equally. Also when selecting items or the bgfetch batch
we should select bgfetches from the front end over bgfetches for expiry
by compaction.

Change-Id: Ifd3894031adaffdee374c1ae6e856e1ebff350b7

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-12-23 16:14:46.000000000
Message: 
Uploaded patch set 14.
----------------------------------------------------------------------------------------------------------------------
Author: Restriction Checker
Date: 2022-12-23 16:15:05.000000000
Message: 
Patch Set 14: Well-Formed-1

Branch restricted. PLEASE READ this URL: 

https://server.jenkins.couchbase.com/job/restricted-branch-check/330349/artifact/restricted.html : FAILURE
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2022-12-23 16:22:11.000000000
Message: 
Patch Set 14:

(19 comments)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-12-23 16:47:16.000000000
Message: 
Patch Set 14: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/725/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.h:905:21: error: no member named "ceil" in namespace "std" [clang-diagnostic-error]
        return std::ceil(bgfetchBatchSize * bgfetchFrontEndRatio);
                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.h:909:21: error: no member named "floor" in namespace "std" [clang-diagnostic-error]
        return std::floor(bgfetchBatchSize * (1 - bgfetchFrontEndRatio));
                    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/725/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-neo/kv_engine/engines/ep/src/ep_engine.h:905:21:
error: no member named "ceil" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-neo/725/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/697/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-neo/kv_engine/engines/ep/src/ep_engine.h:905:21:
error: no member named "ceil" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-neo/697/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/717/ : FAILURE

Compile error at [2022-12-23T16:18:52.697Z] ../kv_engine/engines/ep/src/ep_engine.h:905:21:
error: no member named "ceil" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/neo/717/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1006/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [42/160]: file stats post warmup...../kv_engine/engines/ep/tests/ep_testsuite.cc:2328 Test failed: `" (Expected `376013" to be less than or equal to `360448" - Unexpected fileSize for vbucket)
[2022-12-23T16:28:24.346Z] (287 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/neo/1006/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21865/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-windows-neo/899/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/neo/735/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/neo/743/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/neo/735/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/neo/727/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/neo/746/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
